--- a/public/index.html
+++ b/public/index.html
@@ -26,10 +26,41 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React + MDB by Christian Aichner</title>
+    <title>InspireMedia GmbH</title>
+    <style>
+      noscript {
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        font-size: 1.5rem;
+        background: #ededed;
+        font-family: "Roboto", "Fira-Sans", "Times New Roman", Times, serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 1rem 0 1rem;
+      }
+      noscript p {
+        text-align: center;
+        color: #7f7f7f;
+      }
+      noscript img {
+        margin: auto;
+        display: block;
+        max-width: 80%;
+        max-height: 150px;
+      }
+    </style>
   </head>
   <body>
-    <noscript> You need to enable JavaScript to run this app. </noscript>
+    <noscript
+      ><div className="noscript">
+        <img src="./logo.svg" alt="InspireMedia Logo" />
+        <p>Bitte aktivieren Sie JavaScript um fortzufahren.</p>
+      </div>
+    </noscript>
     <div id="root"></div>
     <!--
       Only use JavaScript here if there is no other way.
