--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,112 @@
       Include the files using the provided code snippet by favicon-generator.org - do not forget to adjust the paths 
       using the %PUBLIC_URL% as base.
     -->
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="%PUBLIC_URL%/fav/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="%PUBLIC_URL%/fav/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="%PUBLIC_URL%/fav/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="%PUBLIC_URL%/fav/apple-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="%PUBLIC_URL%/fav/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="%PUBLIC_URL%/fav/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="%PUBLIC_URL%/fav/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="%PUBLIC_URL%/fav/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="%PUBLIC_URL%/fav/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="%PUBLIC_URL%/fav/android-icon-192x192.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="%PUBLIC_URL%/fav/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="%PUBLIC_URL%/fav/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="%PUBLIC_URL%/fav/favicon-16x16.png"
+    />
+    <link rel="manifest" href="%PUBLIC_URL%/fav/manifest.json" />
+    <meta name="msapplication-TileColor" content="#0096d6" />
+    <meta
+      name="msapplication-TileImage"
+      content="%PUBLIC_URL%/fav/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#0096d6" />
+    <!-- Primary Meta Tags -->
+    <title>InspireMedia GmbH - Ihr Partner</title>
+    <meta name="title" content="InspireMedia GmbH - Ihr Partner" />
+    <meta
+      name="description"
+      content="Unsere kostenlose Analyse zeigt Dir den aktuellen Stand Deiner gesamten Online-Präsenz und liefert individuelle und unkomplizierte Lösungen."
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="InspireMedia GmbH - Ihr Partner" />
+    <meta property="og:site_name" content="InspireMedia GmbH" />
+    <meta
+      property="og:description"
+      content="Unsere kostenlose Analyse zeigt Dir den aktuellen Stand Deiner gesamten Online-Präsenz und liefert individuelle und unkomplizierte Lösungen."
+    />
+    <meta property="og:image" content="https://inspiremedia.at/fav/og.jpg" />
+    <meta property="fb:app_id" content="3091866980833728" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="InspireMedia GmbH - Ihr Partner" />
+    <meta
+      property="twitter:description"
+      content="Unsere kostenlose Analyse zeigt Dir den aktuellen Stand Deiner gesamten Online-Präsenz und liefert individuelle und unkomplizierte Lösungen."
+    />
+    <meta
+      property="twitter:image"
+      content="https://inspiremedia.at/fav/og.jpg"
+    />
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -62,8 +167,25 @@
       </div>
     </noscript>
     <div id="root"></div>
-    <!--
-      Only use JavaScript here if there is no other way.
-    -->
+    <!-- Hotjar Tracking Code for https://www.inspiremedia.at -->
+    <script>
+      (function (h, o, t, j, a, r) {
+        h.hj =
+          h.hj ||
+          function () {
+            (h.hj.q = h.hj.q || []).push(arguments);
+          };
+        h._hjSettings = { hjid: 1994179, hjsv: 6 };
+        a = o.getElementsByTagName("head")[0];
+        r = o.createElement("script");
+        r.async = 1;
+        r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+        a.appendChild(r);
+      })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
+    </script>
+    <script
+      src="//code.tidio.co/ocijtlywpadtiv4xjtymnj6ww9wdrtd2.js"
+      async
+    ></script>
   </body>
 </html>
