Improve sections and page
Some links have been added.

--- a/public/index.html
+++ b/public/index.html
@@ -97,7 +97,7 @@
     <meta name="title" content="InspireMedia GmbH - Ihr Partner" />
     <meta
       name="description"
-      content="Unsere kostenlose Analyse zeigt Dir den aktuellen Stand Deiner gesamten Online-Präsenz und liefert individuelle und unkomplizierte Lösungen."
+      content="Absolut profesionelle Videoproduktion, Webentwicklung. Webseiten, Webshops, Applikationen. Lead Kampagnen, Facebook Marketing. Bei uns bist Du richtig."
     />
 
     <!-- Open Graph / Facebook -->
@@ -106,7 +106,7 @@
     <meta property="og:site_name" content="InspireMedia GmbH" />
     <meta
       property="og:description"
-      content="Unsere kostenlose Analyse zeigt Dir den aktuellen Stand Deiner gesamten Online-Präsenz und liefert individuelle und unkomplizierte Lösungen."
+      content="Absolut profesionelle Videoproduktion, Webentwicklung. Webseiten, Webshops, Applikationen. Lead Kampagnen, Facebook Marketing. Bei uns bist Du richtig."
     />
     <meta property="og:image" content="https://inspiremedia.at/fav/og.jpg" />
     <meta property="fb:app_id" content="3091866980833728" />
@@ -116,7 +116,7 @@
     <meta property="twitter:title" content="InspireMedia GmbH - Ihr Partner" />
     <meta
       property="twitter:description"
-      content="Unsere kostenlose Analyse zeigt Dir den aktuellen Stand Deiner gesamten Online-Präsenz und liefert individuelle und unkomplizierte Lösungen."
+      content="Absolut profesionelle Videoproduktion, Webentwicklung. Webseiten, Webshops, Applikationen. Lead Kampagnen, Facebook Marketing. Bei uns bist Du richtig."
     />
     <meta
       property="twitter:image"
