--- a/public/index.html
+++ b/public/index.html
@@ -183,6 +183,20 @@
         a.appendChild(r);
       })(window, document, "https://static.hotjar.com/c/hotjar-", ".js?sv=");
     </script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-148740308-7"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-148740308-7");
+    </script>
     <script
       src="//code.tidio.co/ocijtlywpadtiv4xjtymnj6ww9wdrtd2.js"
       async
